<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Say Dream</string>
    <string name="non_account">Bạn chưa có tài khoản ?</string>
    <string name="login">Đăng nhập</string>
    <string name="sign_up">Đăng ký</string>
    <string name="email">Email</string>
    <string name="password">Mật khẩu</string>
    <string name="repassword">Nhập lại mật khẩu</string>
    <string name="forgot_password">Quên mật khẩu</string>
    <string name="amount">"Số lượng: "</string>
    <string name="add_cart">Thêm vào giỏ hàng</string>
    <string name="search_hint">Nhập tên sản phẩm cần tìm</string>
    <string name="money">Số tiền</string>
    <string name="change_password">Đổi mật khẩu</string>
    <string name="old_password">Nhập mật khẩu cũ</string>
    <string name="new_password">Nhập mật khẩu mới</string>
    <string name="comfirm_password">Nhập mật khẩu mới</string>
    <string name="history_buy">"Lịch sử mua hàng "</string>
    <string name="recharge">Nạp tiền</string>
    <string name="info_admin">"Thông tin tài khoản Admin: "</string>
    <string name="name_admin">Tên chủ ví: Quàng Ngọc Thủy</string>
    <string name="account_number_admin">Số tài khoản: 12345678910</string>
    <string name="content_admin">Nội dung chuyển : Email + Số điện thoại</string>
    <string name="deposit_amount">Nhập số tiền cần nạp</string>
    <string name="screenshot">Ảnh chụp màn hình giao dịch</string>
    <string name="ok">Ok</string>
    <string name="cancel">Hủy</string>
    <string name="update_info">Cập nhật thông tin</string>
    <string name="name_use">Họ và tên</string>
    <string name="number_phone">Số điện thoại</string>
    <string name="total">Tổng</string>
    <string name="tax">{ Đã bao gồm thuế }</string>
    <string name="order">Đặt hàng</string>
    <string name="status">"Trạng thái: "</string>
    <string name="remove">Loại bỏ</string>
    <string name="transaction_code">Mã giao dịch:</string>
    <string name="time">Thời gian:</string>
    <string name="info_user">Thông tin người dùng</string>
    <string name="address_user">Địa chỉ của bạn</string>
    <string name="history_recharge">Lịch sử nạp</string>
    <string name="logout">Đăng xuất</string>
    <string name="IsEmpty">Không được để trống</string>
    <string name="MessageLoading">Sẽ mất một lúc vui lòng chờ</string>
    <string name="LoginFail">Đăng nhập thất bại</string>
    <string name="SentToEmail">Đã gửi link khôi phục hãy kiểm tra email</string>
    <string name="AccountNull">Tài khoản không tồn tại</string>
    <string name="WrongEmailFomat">Email không đúng định dạng</string>
    <string name="WrongPasswordConfirm">Mật khẩu nhập lại phải giống nhau</string>
    <string name="WrongPasswordSize">Mật khẩu phải dài hơn 6 ký tụ</string>
    <string name="FailSignUp">Đăng ký tài khoản thất bại</string>
    <string name="SuccessSignUp">Đăng ký thành công</string>
    <string name="error">Lỗi</string>
    <string name="see_more">Xem thêm</string>
    <string name="max30">Sản phẩm mua không được vượt quá 30 sản phẩm</string>
    <string name="nullSize">Phải chọn kích cỡ</string>
    <string name="CAddCart">Sản phẩm đã được thêm vào giỏ</string>
    <string name="update_Cart">Đã cập nhật số lượng sản phẩm</string>
    <string name="category">Thương hiệu</string>
    <string name="size">Kích cỡ</string>
    <string name="quantity">Số lượng</string>
    <string name="deleteCart">Thông báo</string>
    <string name="deleteCartSuccess">Xoá thành công</string>
    <string name="deleteCartFail">Xoá thất bại!</string>
    <string name="deleteCartConfirm">Bạn có chắc chắn muốn xoá không?</string>
    <string name="paymentCart">Xác nhận thanh toán?</string>
    <string name="failPayment">Đơn không được tạo!</string>
    <string name="succesPayment">Vui lòng quét QR để thanh toán!</string>
    <string name="InfoProfile">Thông tin cá nhân</string>
    <string name="buyInMonth">Khoản chi trong tháng</string>
    <string name="min100K">Số tiền ít nhất phải là 100.000 VND</string>
    <string name="waitMinute">Vui lòng chờ vài phút để hệ thống kiểm tra</string>
    <string name="isNumber">Phải nhập số</string>
    <string name="GetPermission">Bạn cần cấp quyền để sử dụng tính năng này</string>
    <string name="errorGetLink">Lỗi khi lấy đường dẫn</string>
    <string name="WrongNumberPhone">Số điện thoại không đúng định dạng</string>
    <string name="UpdateProfileComplate">Cập nhật tài khoản thành công</string>
    <string name="WrongPassword">Mật khẩu không đúng</string>
    <string name="UpdatePassCompalete">Cập nhật mật khẩu thành công</string>
    <string name="Notifi">Thông báo</string>
    <string name="signOutUser">Bạn có muốn đăng xuất</string>
    <string name="no">Không</string>
    <string name="yes">Có</string>
    <string name="FomatAddess">Số nhà,Ngõ,Đường,Quận,Thành Phố</string>
    <string name="address">Địa chỉ</string>
    <string name="deleteEver">Nếu bạn xác nhận dữ liệu sẽ mất mãi mãi</string>
    <string name="deleteComplate">Xóa thành công</string>
    <string name="choiceAddress">Đơn hàng của bạn sẽ được giao tới địa chỉ này</string>
    <string name="totalPrice">Tổng giá</string>
    <string name="idBill">Mã đơn hàng</string>
    <string name="staff">Người duyệt</string>
    <string name="date">Ngày mua</string>
    <string name="waitDone">Đang chờ xác nhận</string>
    <string name="doneBill">Đã xác nhận đơn</string>
    <string name="cancelBill">Đơn hàng bị từ chối</string>
    <string name="Nothing">Không có gì ở đây</string>
    <string name="wait">Đang chờ</string>
    <string name="done">Đã xác nhận</string>
    <string name="history_DepositMoneyBill">Lịch sử nạp</string>
    <string name="language">Ngôn ngữ</string>
    <string name="emptyCart">Không có sản phẩm nào trong giỏ hàng!</string>
    <string name="idProduct">Mã sản phẩm</string>
    <string name="nameProduct">Tên sản phẩm</string>
    <string name="priceProduct">Giá</string>
    <string name="titleBilldetail">Hoá đơn chi tiết</string>
    <string name="reBuy">Mua lại</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lang_vn" tools:ignore="MissingTranslation">Tiếng Việt</string>
    <string name="lang_en">English</string>
    <string name="shareFB">Chia sẻ</string>
    <string name="signInUser">"Bạn muốn đăng nhập "</string>

</resources>