<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_dialog"
    android:layout_margin="5dp"
    android:orientation="vertical">
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/recharge"
    android:textColor="#FFC107"
    android:textStyle="bold"
    android:textSize="30dp"
    android:layout_gravity="center"
    android:layout_margin="10dp"/>
   <LinearLayout
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:orientation="vertical"
       android:padding="10dp"
       >
       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/info_admin"
           android:textSize="20dp"
           android:textStyle="bold"
           android:textColor="#FF5722"
           />
       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/name_admin"
           android:textColor="#FF5722"
           />
       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/account_number_admin"
           android:textColor="#FF5722"/>
       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/content_admin"
           android:textColor="#FF5722"
           />
   </LinearLayout>
    <EditText
        android:id="@+id/edt_email_naptien"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:textColor="#E6903B"
        android:background="@drawable/shape_edittext"
        android:hint="@string/email"
        android:textColorHint="@color/vang"
        android:padding="10dp" />



    <EditText
        android:id="@+id/edt_sotien"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:background="@drawable/shape_edittext"
        android:hint="@string/deposit_amount"
        android:textColorHint="@color/vang"
        android:maxLength="10"
        android:inputType="number"
        android:textColor="#E6903B"
        android:padding="10dp" />
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/screenshot"
        android:layout_gravity="center"
        android:textColor="@color/cam"
        />
    <ImageView
        android:layout_gravity="center"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:scaleType="centerCrop"
        android:background="@drawable/baseline_crop_original_24"
        android:layout_marginBottom="10px"
        android:id="@+id/imv_anhchupmanhinh"/>
</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_gui"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/shape_btn"
            android:padding="10dp"
            android:text="@string/ok"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_Huy_yc"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="@drawable/shape_btn"
            android:padding="10dp"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>