<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/white"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_gravity="center"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">
            <ImageView
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:scaleType="centerCrop"
                android:src="@drawable/logo3"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textColor="#01877E"
                android:textSize="40dp"
                android:textStyle="bold"
                tools:ignore="HardcodedText" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/email"
                android:textColorHint="#01877E"
                android:padding="10dp"
                tools:ignore="HardcodedText,UnusedAttribute"
                android:textColor="#01877E"
                android:searchResultHighlightColor="#01877E"
                android:background="@drawable/shape_edittext_login"
                android:id="@+id/edt_email_dangnhap"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/password"
                android:textColorHint="#01877E"
                android:padding="10dp"
                android:inputType="textPassword"
                android:textColor="#01877E"
                android:searchResultHighlightColor="#01877E"
                android:layout_marginTop="10dp"
                tools:ignore="Autofill,HardcodedText,UnusedAttribute"
                android:background="@drawable/shape_edittext_login"
                android:id="@+id/edt_matkhau_dangnhap"

                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center"
                >
                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/login"
                    tools:ignore="HardcodedText"
                    android:padding="10dp"

                    android:textColor="#01877E"
                    android:textStyle="bold"
                    android:layout_margin="10dp"
                    android:background="@drawable/shape_edittext_login"
                    android:id="@+id/btn_dangnhap"/>
                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_up"
                    tools:ignore="HardcodedText"
                    android:padding="10dp"
                    android:textColor="#01877E"
                    android:textStyle="bold"
                    android:layout_margin="10dp"
                    android:background="@drawable/shape_edittext_login"
                    android:id="@+id/btn_dangky"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="1dp"/>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/forgot_password"
                        tools:ignore="HardcodedText"
                        android:textColor="#01877E"
                        android:id="@+id/tv_quenpass"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#01877E"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>