<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/white"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_gravity="center"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">
            <ImageView
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:scaleType="centerCrop"
                android:src="@drawable/logo1"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:textColor="#FFB0A9"
                android:textSize="40dp"
                android:textStyle="bold"
                tools:ignore="HardcodedText" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/email"
                android:textColorHint="#FFB0A9"
                android:padding="10dp"
                tools:ignore="HardcodedText,UnusedAttribute"
                android:textColor="#FFB0A9"
                android:searchResultHighlightColor="#FFB0A9"
                android:background="@drawable/shape_edittext_signup"
                android:id="@+id/edt_email_dangnky"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/password"
                android:textColorHint="#FFB0A9"
                android:padding="10dp"
                android:inputType="textPassword"
                android:textColor="#FFB0A9"
                android:searchResultHighlightColor="#FFB0A9"
                android:layout_marginTop="10dp"
                tools:ignore="Autofill,HardcodedText,UnusedAttribute"
                android:background="@drawable/shape_edittext_signup"
                android:id="@+id/edt_matkhau_dangky"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/repassword"
                android:textColorHint="#FFB0A9"
                android:padding="10dp"
                android:inputType="textPassword"
                android:textColor="#FFB0A9"
                android:searchResultHighlightColor="#FFB0A9"
                android:layout_marginTop="10dp"
                tools:ignore="Autofill,HardcodedText,UnusedAttribute"
                android:background="@drawable/shape_edittext_signup"
                android:id="@+id/edt_rematkhau_dangky"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center"
                >
                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_up"
                    tools:ignore="HardcodedText"
                    android:padding="10dp"
                    android:textColor="#FFB0A9"
                    android:textStyle="bold"
                    android:layout_margin="10dp"
                    android:background="@drawable/shape_edittext_signup"
                    android:id="@+id/btn_dangky_on"/>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>